<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:id="@+id/menugroup1" >
    <item android:id="@+id/menu1"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/menuitem1" />
    <item android:id="@+id/menu2"
        android:title="@string/menuitem2" />
    <item android:id="@+id/menu3"
        android:title="@string/menuitem3" >
    <menu>
        <item
            android:id="@+id/submenu"
            android:title="@string/submenu" />
    </menu>
    </item>
</group>
    <group android:id="@+id/menugroup2" >
        <item
            android:id="@+id/menu4"
            android:checkable="true"
            android:checked="true"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/menuitem4" />
        <item
            android:id="@+id/menu5"
            android:title="@string/menuitem5"
            android:enabled="false" />
        <item
            android:id="@+id/menu6"
            android:title="@string/menuitem6" />
    </group>
</menu>